# course

./: .gitignore  CMakeLists.txt  HOWTO  README.md
BaseCode/: CMakeLists.txt
Connection/: CMakeLists.txt  Makefile
Connection/src/: main.cpp
Elasticity/: CMakeLists.txt
Fairing/: CMakeLists.txt
Flatten/: CMakeLists.txt
Geodesics/: CMakeLists.txt  Makefile
Geodesics/src/: main.cpp
Hot2/: CMakeLists.txt
Stripe/: CMakeLists.txt  Makefile
Stripe/include/: Mesh.h
Stripe/src/: SparseMatrix.cpp  SparseMatrix.inl  Viewer.cpp  main.cpp
class-site/brickisland.net/cs177fa12/: index.html  index.html@cat=3&paged=2.html  index.html@cat=3.html  index.html@cat=4.html  index.html@cat=5&paged=2.html  index.html@cat=5&paged=3.html  index.html@cat=5.html  index.html@feed=comments-rss2  index.html@feed=rss2  index.html@feed=rss2&cat=3  index.html@feed=rss2&cat=4  index.html@feed=rss2&cat=5  index.html@feed=rss2&p=162  index.html@feed=rss2&p=25  index.html@feed=rss2&p=272  index.html@feed=rss2&p=281  index.html@feed=rss2&p=285  index.html@feed=rss2&p=302  index.html@feed=rss2&p=307  index.html@feed=rss2&p=320  index.html@feed=rss2&p=51  index.html@feed=rss2&page_id=11  index.html@feed=rss2&page_id=13  index.html@feed=rss2&page_id=4  index.html@feed=rss2&page_id=9  index.html@m=201210&paged=2.html  index.html@m=201210&paged=3.html  index.html@m=201210&paged=4.html  index.html@m=201210&paged=5.html  index.html@m=201210.html  index.html@m=201211.html  index.html@m=201212.html  index.html@p=104.html  index.html@p=139.html  index.html@p=16.html  index.html@p=162.html  (+31 more)
(+29 files in other folders)
